--- a/global.css
+++ b/global.css
@@ -10,6 +10,21 @@
     box-shadow: 0px 1px 20px rgba(139, 139, 139, 0.65);
 }
 
+.freteGratis{
+ 
+    position: fixed;
+    top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: bold;
+    text-align: center;
+    height: 40px;
+    padding: 10px;
+    width: 100%;
+    background-color: #C2185B;
+    color: #FFFFFF;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
