--- a/trabalheConosco.css
+++ b/trabalheConosco.css
@@ -106,7 +106,14 @@ h1 {
     font-size: 20px;
     line-height: 23px;
     cursor: pointer;
+    transition: all 300ms;
 }
+
+button:hover{
+    color: #C2185B;
+    background-color: #FFFFFF;
+}
+
 
 footer {
     background: #C2185B;
@@ -141,3 +148,4 @@ footer ul {
     height: 123px;
 }
 
+/* testeteste */
